prevent word wrapping on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,9 @@ main {
 .osrsItemColumnCell {
   display: flex;
   align-items: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @import './shared/styles.css';
