--- a/src/shared/table.css
+++ b/src/shared/table.css
@@ -5,6 +5,7 @@
 
 .osrsTable th{
     text-align: left;
+    white-space: nowrap;
 }
 
 .tableFooter {
